Ubuntu and CentOS docs are now in sync. They both need to be followed in order to fill gaps. It was edited without running the commands